# XMFnet

./: LICENSE  README.md  config.py  dataloader.py  eval.py  model.py  requirements.txt  setup.sh  train.py
dataset/: train_list2.tar.xz
decoder/: dec_net.py
decoder/utils/: draw.py  utils.py
decoder/utils/Pointnet2.PyTorch/pointnet2/: pointnet2_modules.py
decoder/utils/furthestPointSampling/: sampling.cpp  sampling_gpu.cu  sampling_gpu.h
decoder/utils/furthestPointSampling/fps_cuda.egg-info/: PKG-INFO  top_level.txt
decoder/utils/metrics/pytorch_structural_losses/: Makefile  match_cost.py  nn_distance.py
decoder/utils/pyTorchChamferDistance/chamfer_distance/: chamfer_distance.py
decoder/utils/randPartial/: CMakeLists.txt  main.cpp  setup.py
decoder/utils/randPartial/randpartial.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
decoder/utils/randPartial/test/: visual.py
encoder_dgcnn/: dgcnn.py
encoder_image/: resnet.py
weakly_supervised/: README.md  config.py  dataloader.py  dataloader_final.py  dataloader_part.py  model.py  renderer.py  train.py  vis_utils.py
weakly_supervised/decoder/: dec_net.py
weakly_supervised/decoder/utils/: sample_pytorch3d.py  utils.py
weakly_supervised/decoder/utils/PyTorchEMD/: test_emd_loss.py
weakly_supervised/decoder/utils/PyTorchEMD/cuda/: emd_kernel.cu
weakly_supervised/decoder/utils/furthestPointSampling/: fps.py  setup.py
weakly_supervised/render/core/: camera.py  cloud.py  lighting.py  rasterizer.py  renderer.py  texture.py
weakly_supervised/render/utils/: mathHelper.py  matrixConstruction.py
(+3 files in other folders)
